[package]
name = "image-morph-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14.0", features=["sipper", "canvas", "smol"] }
image = "0.25.9"
rfd = "0.17.2"
rand = "0.8.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
gloo-timers = { version = "0.3", features = ["futures"] }
